syntax = "proto3";

package protobuf.srl.sketch;

message SrlInterpretation {
    string label = 1;
    double confidence = 2;
    double complexity = 3;
    string interpretationId = 4;
    string recognizerId = 5;
    string isEndState = 6;
    string isForced = 7;
    string description = 8;
    string domain = 9;
}